--- a/gb/22/3/9/n13633573.md
+++ b/gb/22/3/9/n13633573.md
@@ -1,27 +1,29 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yjnkcd3462/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yjnkcd3462/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yjnkcd3462/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yjnkcd3462/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yjnkcd3462/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yjnkcd3462/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yjnkcd3462/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yjnkcd3462/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yjnkcd3462/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yjnkcd3462/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yjnkcd3462/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yjnkcd3462/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yjnkcd3462/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yjnkcd3462/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中国对俄有连动曝险 台立委：台湾不应忽视骨牌效应</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/03/id13633575-544144-600x400.jpg" />
 <h6>金管会主委黄天牧9日在立法院财政委员会前接受媒体联访。（中央社）
 </h6>
 <hr>
-<p>【大纪元2022年03月09日讯】（大纪元记者侯骏霖台湾台北报导）美国耶鲁大学资深研究员罗奇（Stephen Roach）日前表示，若俄罗斯爆发债务违约，恐对全球新兴市场的主权债产生外溢效应，<ahref="https://github.com/yjnkcd3462/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD.md#1">中国</a>不可能毫发无伤。对此，台立委9日质询时特别关切台湾金融业对中国<ahref="https://github.com/yjnkcd3462/djy/blob/master/gb/tag/%E6%9B%9D%E9%99%A9.md#1">曝险</a>的情况，担心因此发生骨牌效应。<ahref="https://github.com/yjnkcd3462/djy/blob/master/gb/tag/%E9%87%91%E7%AE%A1%E4%BC%9A.md#1">金管会</a>回应，目前银行对<ahref="https://github.com/yjnkcd3462/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD.md#1">中国</a>的<ahref="https://github.com/yjnkcd3462/djy/blob/master/gb/tag/%E6%9B%9D%E9%99%A9.md#1">曝险</a>净值比已来到历史新低。</p>
-<p>根据台<ahref="https://github.com/yjnkcd3462/djy/blob/master/gb/tag/%E9%87%91%E7%AE%A1%E4%BC%9A.md#1">金管会</a>统计，截至1月底，保险业对中国曝险金额0.29兆元、占海外曝险比例为1.45%，银行业曝险1.34兆元、占海外曝险6.75%，投信基金曝险0.46兆元、占海外曝险2.33%。</p>
+<p>【大纪元2022年03月09日讯】（大纪元记者侯骏霖台湾台北报导）美国耶鲁大学资深研究员罗奇（Stephen Roach）日前表示，若俄罗斯爆发债务违约，恐对全球新兴市场的主权债产生外溢效应，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD.md#1">中国</a>不可能毫发无伤。对此，台立委9日质询时特别关切台湾金融业对中国<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%9B%9D%E9%99%A9.md#1">曝险</a>的情况，担心因此发生骨牌效应。<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%87%91%E7%AE%A1%E4%BC%9A.md#1">金管会</a>回应，目前银行对中国的曝险净值比已来到历史新低。</p>
+<p>根据台<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%87%91%E7%AE%A1%E4%BC%9A.md#1">金管会</a>统计，截至1月底，保险业对<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD.md#1">中国</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%9B%9D%E9%99%A9.md#1">曝险</a>金额0.29兆元、占海外曝险比例为1.45%，银行业曝险1.34兆元、占海外曝险6.75%，投信基金曝险0.46兆元、占海外曝险2.33%。</p>
 <p>林楚茵表示，金融市场是连动的，即便对俄罗斯的曝险不高，但中国与俄罗斯持续交好，台湾应持续关注对中国曝险的风险，国银对中国曝险的比例占全体海外曝险6.75%，金管会应针对区域性连动提高警觉。</p>
 <p>黄天牧指出，银行目前对中国授信曝险的净值比为33.9%，已是历史新低，未来也会持续关注中国、欧美对俄罗斯连动的金融影响；财政部政次阮清华也回应，公股行库对中国曝险仅占净值0.2%，一直都是财政部对公银行库的控管重点。</p>
 <h2>未事前管理金融业对俄曝险？ 黄天牧提二点反驳</h2>
 <p>金管会主委黄天牧9日在立法院财委会前受访表示，针对金融业对俄曝险，保险业当初投资俄罗斯债券都是“合乎规定”，符合国外投资等相关办法，加上投资比例不大，相对各国并不明显，目前是因为俄罗斯被降评才有调整问题。</p>
 <p>其次，黄天牧指出，金管会在过年前就已经在关注俄乌情势的风险，同时掌握相关曝险数据，并非是“后见之明”。他也提及，寿险投资俄罗斯债券，其实风险没有外界想像会血本无归。</p>
-<p>黄天牧说，依国外投资管理办法，有规定可投资的标的、信评、限额等，1月<ahref="https://github.com/yjnkcd3462/djy/blob/master/gb/tag/%E5%AF%BF%E9%99%A9%E4%B8%9A.md#1">寿险业</a>投资俄罗斯债券达1,382亿元，当时都有合乎规定，主要是俄罗斯信评急速降级，才需评估预期信用损失。</p>
+<p>黄天牧说，依国外投资管理办法，有规定可投资的标的、信评、限额等，1月<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%AF%BF%E9%99%A9%E4%B8%9A.md#1">寿险业</a>投资俄罗斯债券达1,382亿元，当时都有合乎规定，主要是俄罗斯信评急速降级，才需评估预期信用损失。</p>
 <p>他说，俄罗斯政府已宣布同意继续付息，需要看当时契约规定是否用卢布付息，如果不接受卢布就会有汇率风险，都应依照IFRS 9财报准则计提损失。</p>
-<p>目前<ahref="https://github.com/yjnkcd3462/djy/blob/master/gb/tag/%E5%AF%BF%E9%99%A9%E4%B8%9A.md#1">寿险业</a>10年以上的俄国债券，占比为93.45％，其中更包含20、30年才到期的债券。黄天牧表示，未来是否会违约，可能很难马上判断，现在就说会血本无归、恐言之过早。此外，1,382亿元占寿险资金的0.46％，若暂时都拿不回来，对于各家寿险所属金控来说，金额影响也不大。</p>
+<p>目前<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%AF%BF%E9%99%A9%E4%B8%9A.md#1">寿险业</a>10年以上的俄国债券，占比为93.45％，其中更包含20、30年才到期的债券。黄天牧表示，未来是否会违约，可能很难马上判断，现在就说会血本无归、恐言之过早。此外，1,382亿元占寿险资金的0.46％，若暂时都拿不回来，对于各家寿险所属金控来说，金额影响也不大。</p>
 <h2>金管会证实六大寿险提列俄罗斯减损 预估达百亿元</h2>
-<p>近期国际信评机构调降俄罗斯评等，寿险公司陆续认列持有俄债部位的预期信用损失。金管会主委黄天牧9日表示，目前四家寿险已认列减损80多亿元，但若加计汇率风险，预估六大寿险可能认列投资的预期信用损失约100亿元，但他强调，主管机关主要在意的还是整体金融韧性是否强健。</p>
-<p>截至3月8日为止，有四大寿险已公布提列信用减损，包括国泰人寿提列26亿元、富邦人寿提列22亿元、新光人寿提列31.6亿元以及台湾人寿提列5亿元，四大寿险减损合达84.6亿元。</p>
-<p>立委沈发惠在立法院财委会质询时表示，金管会对俄罗斯制裁的影响程度过度乐观，金融机构对俄罗斯曝险事后又认列投资减损，针对六大寿险业，评估认列俄罗斯债券的减损金额为何？</p>
-<p>黄天牧对此回应，由于国际信评机构调降俄罗斯评等，已触动保险业信用评价损失，从现在已公布的四大寿险减损合计超过80亿元，而六大寿险可能认列的利息信用减损约100亿元。不过，目前俄罗斯政府对外说明将继续支付利息，信用风险已经降低，不排除未来损失有可能会回转。</p>
-<p>此外，立委吴秉叡指出，寿险业对俄乌投资金额不一，俄罗斯被踢出环球银行通讯协会（SWIFT）支付系统，保险业者有买俄国公债就无法进行结算，对于计算价值议题有备受关注。</p>
+<p>近期国际信评机构调降俄罗斯评等，寿险公司陆续认列持有俄债部位的预期信用损失。金管会主委黄天牧9日表示，目前四家寿险已认列减损80多亿元，但若加计汇率风险，预估八大寿险可能认列投资的预期信用损失约100亿元，但他强调，主管机关主要在意的还是整体金融韧性是否强健。</p>
+<p>依据公会统计，共有国泰、富邦、台寿、新光、中寿、南山、全球跟三商美邦8家持有俄罗斯债券，目前国泰人寿已宣布2月认列损失提列26亿元，富邦人寿宣布2月提列22亿元，新光人寿宣布2月提列31.6亿元，台湾人寿宣布2月提列5亿元，目前4家合计2月约提列损失84亿元。</p>
+<p>立委沈发惠在立法院财委会质询时表示，金管会对于金融机构对俄罗斯曝险，及对俄罗斯制裁的影响程度过度乐观，却又事后认列投资减损，是否“轻描淡写”，针对寿险业评估认列俄罗斯债券的减损金额为何？</p>
+<p>黄天牧对此回应，由于国际信评机构调降俄罗斯评等，已触动保险业信用评价损失，从现在已公布的四大寿险减损合计超过80亿元，而八大寿险可能认列的利息信用减损约100亿元。</p>
+<p>不过，黄天牧说，目前俄罗斯政府对外说明将继续支付利息，信用风险已经降低，不排除未来损失有可能会回转。</p>
+<p>金管会保险局长施琼华也表示，寿险业主要影响在于利息支付部分，若以卢布支付即有汇率风险，预估寿险公司认列预期信用损失金额约100亿元。</p>
+<p>此外，立委吴秉叡指出，寿险业对俄乌投资金额不一，俄罗斯被踢出环球银行通讯协会（SWIFT）支付系统，保险业者有买俄国公债就无法进行结算，保险业如何计算价值备受瞩目。</p>
 <p>黄天牧指出，信评机构调降俄罗斯债券评等时，就会产生预期信用损失，寿险公司将依IFRS 9揭露预估损失，保险业资讯透明相当重要，但损失认列时程、严谨程度皆由各公司决定，但不会偏离第九号公报的原则，寿险业都会提供完整资讯供民众了解。</p>
 <h2>官股券商买超 阮清华：未指示泛公股护盘</h2>
 <p>俄乌战云持续冲击台股表现，立委赖士葆质询时指出，台湾八大官股券商7、8日皆买超，泛公股是否有收到政府指示、进场护盘，导致“官股买、外资卖”，换句话说，就是把官股的钱送给外资。</p>
@@ -34,47 +36,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/21/11/12/n13371917.md#1">寿险业再推最低1.5%保单贷款助纾困</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/2/n13616359.md#1">对俄曝险逾千亿 台寿险公会：只占0.46%</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/3/n13619465.md#1">混合型、纯视讯股东会问题多 台金管会：断线股东无法投票</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/4/n13621929.md#1">俄乌战事 台金管会吁严防虚拟货币诈骗</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/6/n13625784.md#1">台寿险业持1382亿俄罗斯债 国泰金认列26亿损失</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/7/n13629305.md#1">美海关查获230枚中国伪造总冠军戒指</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/8/n13630325.md#1">【网海拾贝】乌俄之战离中国很远，铁链女离中国人很近</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/8/n13630653.md#1">建构ESG生态系 金管会订证券期货业永续转型大计</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/9/n13633576.md#1">台股有回稳迹象？ 国安基金关注四大变数</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/9/n13633565.md#1">美国制裁俄国虚拟账户 台立委吁设相关机制</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/12/n13371917.md#1">寿险业再推最低1.5%保单贷款助纾困</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/2/n13616359.md#1">对俄曝险逾千亿 台寿险公会：只占0.46%</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/3/n13619465.md#1">混合型、纯视讯股东会问题多 台金管会：断线股东无法投票</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/4/n13621929.md#1">俄乌战事 台金管会吁严防虚拟货币诈骗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/6/n13625784.md#1">台寿险业持1382亿俄罗斯债 国泰金认列26亿损失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/7/n13629305.md#1">美海关查获230枚中国伪造总冠军戒指</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/8/n13630325.md#1">【网海拾贝】乌俄之战离中国很远，铁链女离中国人很近</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/8/n13630653.md#1">建构ESG生态系 金管会订证券期货业永续转型大计</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680888.md#1">遭点名没撤俄 华硕董座施崇棠重申：已停止出货</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680895.md#1">数位化趋势 科技、供应链人才需求夯</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11257087.md#1" target="_blank">【征文】凌晓辉：贞洁论（三）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/25/n11409005.md#1" target="_blank">法轮功反迫害 川普政府与美国国会公开声援</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/1/n9913343.md#1" target="_blank">淳子：闺秀文革自杀名单</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/6/n11167851.md#1" target="_blank">天主教新闻网：中共的群体灭绝罪行</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/2/17/n13585268.md#1">【未解之谜】通灵男孩之一：癌症是“螃蟹”？</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/3/n13617717.md#1">【百年真相】惊天大案头目 被江泽民故意放走？</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/2/21/n13594785.md#1">【未解之谜】拿地球人做实验？外星人意欲何为？</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/6/n13625395.md#1">日本寺庙有300年前人鱼木乃伊 长30公分</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/2/25/n13605650.md#1">沈纯良娶盲妻 源于前世一笑一怒之报</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/9/n13632408.md#1">漫画家大雄：从绘画到多元文艺 （上）</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/8/n13631558.md#1">【新闻看点】俄安全官员通话被窃听 自认必败？</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/8/n13631356.md#1">【财商天下】中共GDP目标来自月球？中国人要“爬坡过坎”</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/2/n13615256.md#1">在Costco买新鲜食物存冰箱 营养师推荐5种</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/7/n13629038.md#1">网络流出俄情报机构报告：对乌战争无胜算</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/2/26/n13607564.md#1">【思想领袖】马龙：打疫苗越多 为何感染风险越大</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/8/n13629675.md#1">大S徐熙媛与“酷龙”具俊晔续前缘 宣布结婚</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/6/n13626756.md#1">逾10位港星改名都各有原因 李佳芯为身体健康</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/7/n13629278.md#1">客串韩剧演大妈？ 范冰冰憔悴落魄造型曝光</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/6/n13626613.md#1">高圆圆自认表演天赋不够 曾抗拒别人谈她的容貌</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/7/n13629121.md#1">声援铁链女 中国导演胡雪杨发布同类题材新片</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/5/n13624381.md#1">茄子可防动脉硬化 烹煮3个技巧避免变色</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/6/n13625094.md#1">当季水果鲜甜营养 吃对了就不容易生病</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/7/n13628596.md#1">对抗皮肤老化的5个天然良方</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/6/n13626183.md#1">生活中霉菌别小觑 可增加疾病风险 如何去除</a></li>
-<li><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/8/n13630345.md#1">为何有些航空公司不使用空桥让乘客登机？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yjnkcd3462/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yjnkcd3462/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/9/n13633573.htm">中国对俄有连动曝险 台立委：台湾不应忽视骨牌效应</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/9/n13633573.htm">中国对俄有连动曝险 台立委：台湾不应忽视骨牌效应</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yjnkcd3462/djy/blob/master/gb/22/3/9/n13633573.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yjnkcd3462/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yjnkcd3462/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yjnkcd3462/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yjnkcd3462/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13633573.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
